<resources>
    <string name="app_name">
        MioVini
    </string>
    <string name="finished_early">
        Acabou Antes da hora
    </string>
    <string name="successfully_ended">
        Acabou Com Sucesso
    </string>
    <string name="synchronizing_database">
        Sincronizando banco de dados
    </string>
    <string name="in_progress">
        Em andamento
    </string>
    <string name="imagepicker_msg_no_images">
        Não há imagens na galeria.
    </string>
    <string name="imagepicker_gallery_activity">
        Galeria
    </string>
    <string name="imagepicker_cam_photos_activity">
        Fotos MioVini
    </string>
    <string name="imagepicker_selection_limit">
        Apenas uma imagem pode ser selecionada.
    </string>
    <string name="field_required">
        Obrigatório
    </string>
    <string name="no_internet_connection">
        Sem conexão com a internet
    </string>
    <string name="ic_info_desc">
        Ícone de informação.
    </string>
    <string name="yes_button">
        Sim
    </string>
    <string name="no_button">
        Não
    </string>
    <string name="title_activity_login">
        Login
    </string>
    <string name="hint_password">
        Senha
    </string>
    <string name="hint_email">
        E-mail
    </string>
    <string name="forgot_my_password">
        Esqueci minha senha
    </string>
    <string name="sign_in">
        Entrar
    </string>
    <string name="sign_in_going">
        Entrando&#8230;
    </string>
    <string name="sing_in_google">
        Entrar com o Google
    </string>
    <string name="or">
        ou
    </string>
    <string name="create_my_account">
        Criar minha conta
    </string>
    <string name="privacy_policy">
        Políticas de privacidade
    </string>
    <string name="invalid_password">
        Mínimo de 8 caracteres.
    </string>
    <string name="invalid_email">
        Forneça um e-mail válido.
    </string>
    <string name="unregistered_email">
        E-mail não cadastrado ou incorreto
    </string>
    <string name="wrong_password">
        Senha está errada
    </string>
    <string name="unable_to_login">
        Não foi possivel logar
    </string>
    <string name="title_activity_sign_up">
        Cadastro
    </string>
    <string name="hint_email_to_login">
        E-mail (para login)
    </string>
    <string name="hint_name">
        Nome
    </string>
    <string name="hint_confirm_password">
        Confirmar senha
    </string>
    <string name="do_login">
        Realizar login
    </string>
    <string name="sign_up">
        Cadastrar
    </string>
    <string name="sign_up_going">
        Cadastrando&#8230;
    </string>
    <string name="invalid_confirmed_password">
        Confirme a senha informada no campo acima.
    </string>
    <string name="invalid_sign_up_email">
        E-mail já cadastrado.
    </string>
    <string name="weak_password">
        Senha Fraca
    </string>
    <string name="could_not_register">
        Não foi possivel cadastrar.
    </string>
    <string name="account_successfully_created">
        Conta criada com sucesso
    </string>
    <string name="title_activity_forgot_password">
        Recuperação de senha
    </string>
    <string name="forgot_password_info">
        Informe abaixo o seu e-mail de login e em seguida acesse
        o e-mail para prosseguir com o passo a passo de recuperação
        de acesso.
    </string>
    <string name="hint_login_email">
        E-mail de login
    </string>
    <string name="recover_password">
        Recuperar senha
    </string>
    <string name="recover_password_going">
        Enviando&#8230;
    </string>
    <string name="invalid_login_email">
        E-mail não encontrado em nossa base de dados.
    </string>
    <string name="email_sent">
        E-mail enviado com sucesso
    </string>
    <string name="navigation_drawer_open" translatable="false">
        Open navigation drawer
    </string>
    <string name="navigation_drawer_close" translatable="false">
        Close navigation drawer
    </string>
    <string name="title_group_navigation_drawer_filter">
        Filtro
    </string>
    <string name="menu_item_in_the_cellar">
        Adega
    </string>
    <string name="menu_item_rating">
        Classificação
    </string>
    <string name="menu_item_bookmark">
        Favoritos
    </string>
    <string name="menu_item_name">
        Nome
    </string>
    <string name="menu_item_country_of_origin">
        Origem
    </string>
    <string name="menu_item_privacy_policy">
        Políticas de privacidade
    </string>
    <string name="menu_item_settings">
        Minhas configurações
    </string>
    <string name="menu_item_sign_out">
        Sair
    </string>
    <string name="title_alertDialog_without_wine">
        Ops
    </string>
    <string name="title_firt_login">
        Bem-vindo
    </string>
    <string name="alert_message_dialogue_without_wine">
        Não há vinho(s) cadastrado(s) para exibir.
        Cadastre ou mude o filtro utilizado!
    </string>
    <string name="alert_menssage_firt_login">
        Você não possui nenhum cadastro de vinho na sua adega, deseja cadastrar agora?
    </string>
    <string name="alert_information_sync_container">
        Última sincronização automática:
    </string>
    <string name="alert_information_search_container">
        A busca será realizada com base na
    </string>
    <string name="sync_now">
        Sincronizar agora (Apenas no Wi-fi)
    </string>
    <string name="add_button">
        Cadastrar
    </string>
    <string name="cancel_buttom">
        Agora não
    </string>
    <string name="change_filter">
        Mudar filtro
    </string>
    <string name="field_name">
        Nome
    </string>
    <string name="field_country">
        País de origem
    </string>
    <string name="field_vintage">
        Safra
    </string>
    <string name="field_temperature">
        Temperatura ideal
    </string>
    <string name="field_wineHouse">
        Garrafas na adega
    </string>
    <string name="field_grape">
        Uvas
    </string>
    <string name="field_harmonization">
        Harmoniza com
    </string>
    <string name="field_comment">
        Comentário
    </string>
    <string name="field_producer">
        Produtor
    </string>
    <string name="field_date">
        Data
    </string>
    <string name="field_amount">
        Quantidade
    </string>
    <string name="field_price">
        Preço
    </string>
    <string name="filed_store">
        Loja
    </string>
    <string name="field_rating">
        Avaliação
    </string>
    <string name="title_dialog_delete">
        Atenção
    </string>
    <string name="title_activity_wine_details">
        Detalhe Vinho
    </string>
    <string name="title_dialog_purchase">
        Compras
    </string>
    <string name="title_dialog_without_purchase_record">
        Sem compra cadastrado
    </string>
    <string name="field_comments">
        Comentários
    </string>
    <string name="field_bookmark">
        Favorito
    </string>
    <string name="field_date_wineHouse">
        Data Adega:
    </string>
    <string name="field_date_purchase">
        Data: %1$s
    </string>
    <string name="field_store_purchase">
        Loja: %1$s
    </string>
    <string name="field_amount_purchase">
        Quantidade: %1$s
    </string>
    <string name="field_price_purchase">
        Preço: %1$s
    </string>
    <string name="field_vintage_purchase">
        Safra: %1$s
    </string>
    <string name="field_comment_purchase">
        Commentario: %1$s
    </string>
    <string name="dialog_message_delete">
       Deseja realmente deletar: %1$s?
    </string>
    <string name="added_to_favorite">
        Adicionado aos favoritos
    </string>
    <string name="removed_from_favorite">
        Removido dos favoritos
    </string>
    <string name="failed_favorite">
       Erro ao atualizar o favorito
    </string>
    <string name="updated_winery">
        Adega Atualizada
    </string>
    <string name="winery_upgrade_failed">
        Erro ao atualizar a adega
    </string>
    <string name="successfully_deleted">
       Deletado com sucesso!
    </string>
    <string name="error_delete">
        Não foi possível deletar
    </string>
    <string name="new_purchase">
        Nova\ncompra
    </string>
    <string name="title_activity_wine_register">
        Cadastro Vinho
    </string>
    <string name="title_dialog_new_purchase_record">
        Nova compra
    </string>
    <string name="title_notification_upload_image">
        Enviando a imagem
    </string>
    <string name="upload_in_progress">
        Em andamento
    </string>
    <string name="hint_new_comment_record">
        Novo comentario
    </string>
    <string name="hint_update_comment_record">
        Atualização comentario
    </string>
    <string name="title_dialog_update_purchase_record">
        Atualização compra
    </string>
    <string name="save">
        Salvar
    </string>
    <string name="purchase_confirmation">
        Confirmar
    </string>
    <string name="purchase_close">
        Fechar
    </string>
    <string name="save_going">
        Salvando&#8230;
    </string>
    <string name="channelIdNotification">
        uploadImage
    </string>
    <string name="purchase_information_attached">
        Informações anexadas com as demais
    </string>
    <string name="validation_purchase_vintage">
        Preceisa ter 4 digitos
    </string>
    <string name="validation_date">
        Data invalida
    </string>
    <string name="success_in_operation">
        Sucesso!
    </string>
    <string name="message_exit_without_save">
        Há informações não salvas, deseja realmente sair?
    </string>
    <string name="no_change_of_information">
        Sem alteração de informação!
    </string>
    <string name="error_saving">
        Erro ao salvar!
    </string>
    <string name="error_upload_image">
        Não foi possivel enviar a foto!
    </string>
    <string name="title_activity_settings">
        Configurações de conta
    </string>
    <string name="connected">
        Conectado:
    </string>
    <string name="setting_item_profile">
        Perfil
    </string>
    <string name="setting_item_profile_desc">
        Para atualização de nome de perfil.
    </string>
    <string name="setting_item_login">
        Conexão (login)
    </string>
    <string name="setting_item_login_desc">
        Para atualização de e-mail ou senha de acesso.
    </string>
    <string name="title_activity_connect_data">
        ConnectDataActivity
    </string>
    <string name="wrong_provider_to_change_password">
        Disponível para login com email e senha apenas
    </string>
    <string name="title_activity_config_profile">
        Perfil
    </string>
    <string name="info_profile_photo">
        Toque na foto para abrir a galeria ou fotografia.
    </string>
    <string name="name_label">
        Nome:
    </string>
    <string name="config_profile">
        Atualizar perfil
    </string>
    <string name="config_profile_going">
        Atualizando&#8230;
    </string>
    <string name="invalid_name">
        Nome inválido.
    </string>
    <string name="invalid_config_profile">
        Um nome válido deve ser fornecido
    </string>
    <string name="title_activity_filter_preference">
        Filtro para inicialização do app
    </string>
    <string name="default_filter">
        Filtro padrão para inciar o app
    </string>
    <string name="select_an_item">
        Selecione um item:
    </string>
    <string name="defined_for">
        Configurado para:
    </string>
    <string name="title_activity_config_connection_data">
        Conexão (login)
    </string>
    <string name="dialog_password_info">
        Entre com a senha para poder prosseguir:
    </string>
</resources>