<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/lay_conf"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".view.configuration.FilterPreferenceActivity"
        tools:showIn="@layout/activity_filter_preference">

    <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/select_an_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
            android:id="@+id/configuracao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checkedButton="@+id/sound"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

        <RadioButton
                android:id="@+id/rb_adega"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickRadio"
                android:text="@string/field_wineHouse" />

        <RadioButton
                android:id="@+id/rb_classificacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickRadio"
                android:text="@string/field_rating" />

        <RadioButton
                android:id="@+id/rb_favorito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickRadio"
                android:text="@string/field_bookmark" />

        <RadioButton
                android:id="@+id/rb_nome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickRadio"
                android:text="@string/field_name" />

        <RadioButton
                android:id="@+id/rb_origem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickRadio"
                android:text="@string/field_country" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>