<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/ll_container_fields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email">

            <EditText
                    android:id="@+id/et_email"
                    style="@style/EditTextFormField"
                    android:background="@drawable/bg_form_field_top"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                app:passwordToggleEnabled="true">

            <EditText
                    android:id="@+id/et_password"
                    style="@style/EditTextFormField"
                    android:layout_marginTop="-1dp"
                    android:ems="10"
                    android:background="@drawable/bg_form_field_bottom"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <TextView
            android:id="@+id/tv_forgot_password"
            style="@style/TextViewLink"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/ll_container_fields"
            app:layout_constraintLeft_toLeftOf="@+id/ll_container_fields"
            android:text="@string/forgot_my_password"
            android:onClick="callForgotPasswordActivity"/>

    <Button
            android:id="@+id/bt_login"
            style="@style/ButtonForm"
            app:layout_constraintTop_toBottomOf="@+id/ll_container_fields"
            app:layout_constraintRight_toRightOf="@+id/ll_container_fields"
            android:onClick="mainAction"
            android:text="@string/sign_in"/>

    <TextView
            android:id="@+id/tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            app:layout_constraintTop_toBottomOf="@+id/bt_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textColor="@color/colorText"
            android:text="@string/or"/>

    <com.google.android.gms.common.SignInButton
            android:id="@+id/google_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_or"
            app:layout_constraintEnd_toEndOf="@+id/bt_login"
            app:layout_constraintStart_toStartOf="@+id/tv_forgot_password" android:layout_marginTop="8dp"/>

    <TextView
            android:id="@+id/tv_sign_up"
            style="@style/TextViewLink"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/google_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/create_my_account"
            android:onClick="callSignUpActivity"/>

    <include layout="@layout/text_view_privacy_policy_login"/>
</androidx.constraintlayout.widget.ConstraintLayout>