<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <com.santalu.maskedittext.MaskEditText
                android:id="@+id/et_date"
                style="@style/EditTextFormRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_date"
                android:inputType="date"
                app:met_mask="##/##/####" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout5"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout5"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_price"
                style="@style/EditTextFormRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_price"
                android:inputType="numberDecimal"
                android:maxLength="8" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout5"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.962"
            app:layout_constraintStart_toEndOf="@+id/textInputLayout2"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_vintage"
                style="@style/EditTextFormRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_vintage"
                android:inputType="number"
                android:maxLength="4" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_amount"
                style="@style/EditTextFormRegister"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/field_amount"
                android:inputType="numberDecimal"
                android:maxLength="3" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_store"
                style="@style/EditTextFormRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/filed_store"
                android:inputType="textShortMessage|textAutoCorrect|textCapSentences|textAutoComplete"
                android:maxLength="100"
                android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout7">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_comment"
                style="@style/EditTextFormRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_comment"
                android:inputType="textShortMessage|textAutoCorrect|textMultiLine|textCapSentences|textAutoComplete"
                android:maxLength="150"
                android:maxLines="4" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/bt_save_purchase"
            style="@style/ButtonForm"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:onClick="savePurchaseButton"
            android:text="@string/purchase_confirmation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout8"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout8" />

    <Button
            android:id="@+id/bt_close_purchase"
            style="@style/ButtonForm"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:onClick="closePurchaseButton"
            android:text="@string/purchase_close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout8"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout8" />
</androidx.constraintlayout.widget.ConstraintLayout>